--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,24 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet">
+    <!-- material design -->
+    <link href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css" rel="stylesheet">
+    <title>Graduate work</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+  <body style="font-family: 'Ubuntu', sans-serif;">
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+    <script>
+      import {MDCFormField} from '@material/form-field';
+      import {MDCCheckbox} from '@material/checkbox';
+
+      const formField = new MDCFormField(document.querySelector('.mdc-form-field'));
+      const checkbox = new MDCCheckbox(document.querySelector('.mdc-checkbox'));
+      formField.input = checkbox;
+    </script>
   </body>
 </html>
